[package]
name = "shortstat-parser"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
git2 = "0.11.0"
docopt = "1.1.0"
